--- a/lms-backend/src/main/resources/application-prod.yml
+++ b/lms-backend/src/main/resources/application-prod.yml
@@ -1,34 +1,30 @@
-logging:
-  level:
-    graphql: ERROR
-    org:
-      hibernate:
-        sql: DEBUG
-        type:
-          descriptor:
-            sql:
-              BasicBinder: TRACE
-
 spring:
-  main:
-    lazy-initialization: true
-
+  datasource:
+    url: jdbc:postgresql://localhost:5432/lms
+    username: postgres
+    password: root123
   jpa:
-    generateDdl: true
+    show-sql: true
+
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        globally_quoted_identifiers: true
-        ddl-auto: create
-        use_sql_comments: true
-        format_sql: true
+        enable_lazy_load_no_trans: true
         jdbc:
-          time_zone: UTC
-    show-sql: true
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+          lob:
+            non_contextual_creation: true
+    database-platform: org.hibernate.dialect.PostgreSQL94Dialect
+  sql:
+    init:
+      mode: never
 
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    password: 123123
-    username: root
-    url: jdbc:mysql://localhost:3306/lms?zeroDateTimeBehavior=convertToNull&autoReconnection=true&autoReconnectForPools=true&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8
+
+logging:
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+  file:
+    name: /logs/online_shop.log
+  level:
+    org.springframework.web: ERROR
+    org.hibernate: ERROR
