--- a/lms-react/package.json
+++ b/lms-react/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
